Fixed spacing under logo

--- a/css/main.css
+++ b/css/main.css
@@ -173,7 +173,7 @@ header figure {
   width: 100%;
   height: 1px;
   padding: 10px 0;
-  margin: 10px 0 20px 0;
+  margin: 0 0 20px 0;
   border-bottom: 1px solid #3a3a3a;
 }
 
